fix header <p> break the parent, fix li break ol

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,6 +62,7 @@
 		line-height: 2.5;
 		margin: -1em 1em 0;
 		text-transform: uppercase;
+                word-break: break-all;
 	}
 
 	table {
@@ -854,7 +855,7 @@
 	}
 
 		ul li {
-			padding-left: 0.5em;
+			margin-left: 0.25em;
 		}
 
 		ul.alt {
